infrastructure/k8s/enterprise/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zttato-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.zeaz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 8000
